--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pizza-shop",
-  "version": "0.1.0",
+  "name": "pizza-go",
+  "version": "1.2.3",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "tailwindcss": "^3.3.1",
